--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "class-validator": "^0.14.0",
     "firebase-admin": "^11.10.1",
     "jsonwebtoken": "^9.0.2",
+    "nestjs-i18n": "^10.5.1",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
