--- a/.env.backup
+++ b/.env.backup
@@ -1,12 +1,22 @@
 # Database Configuration
-DB_HOST=localhost
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_USERNAME=postgres
+# DB_PASSWORD=postgres
+# DB_NAME=zwaj-in
+# DB_SYNCHRONIZE=true
+# DB_LOGGING=false
+# DB_SSL=false
+
+# Database Configuration
+DB_HOST=aws-1-eu-north-1.pooler.supabase.com
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=zwaj-in
+DB_USERNAME=postgres.oqfmlfhvanbkasarajrj
+DB_PASSWORD=TpJ0NDzKCBTtsLsf
+DB_NAME=postgres
 DB_SYNCHRONIZE=true
 DB_LOGGING=false
-DB_SSL=false
+DB_SSL=true
 
 # Redis Configuration
 REDIS_HOST=redis-15377.c13.us-east-1-3.ec2.redns.redis-cloud.com
@@ -42,9 +52,3 @@ RATE_LIMIT_OTP_RESEND=3
 # Application Configuration
 PORT=3000
 NODE_ENV=development
-
-# WebSocket/Socket.IO Configuration (Phase 5)
-SOCKET_IO_CORS_ORIGIN=http://localhost:3000
-SOCKET_IO_PATH=/socket.io
-MESSAGE_MAX_LENGTH=2000
-TYPING_TIMEOUT=5000
