feat(admin): implement admin dashboard features including user management, report handling, and analytics, along with environment configuration for super admin setup

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,11 @@ SOCKET_IO_CORS_ORIGIN=http://localhost:3000
 SOCKET_IO_PATH=/socket.io
 MESSAGE_MAX_LENGTH=2000
 TYPING_TIMEOUT=5000
+
+# Admin Configuration (Phase 5 - Part B)
+# Super Admin credentials for initial setup
+SUPER_ADMIN_EMAIL=superadmin@zawaj.in
+SUPER_ADMIN_PASSWORD=SuperAdmin@123
+SUPER_ADMIN_FULL_NAME=Super Administrator
+SUPER_ADMIN_PHONE=+1234567890
+SUPER_ADMIN_GENDER=male
