--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^17.2.3",
+    "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
