--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "firebase-admin": "^11.10.1",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nestjs-i18n": "^10.5.1",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
@@ -76,6 +77,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.10.2",
